<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="0dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon1"
            android:layout_width="284dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/app_name"
            android:padding="0dp"
            android:src="@drawable/lpglogo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_person_white_24dp"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/hintPhoneNumber"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#F82020" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F82020" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/hintPass">

            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@color/transparent"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                android:drawableLeft="@drawable/ic_lock_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="#F82020" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F82020" />


        <!--<com.rey.material.widget.CheckBox-->
            <!--android:id="@+id/checkbox1"-->
            <!--style="@style/Material.Drawable.CheckBox"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:gravity="center_vertical"-->
            <!--android:padding="8dp"-->
            <!--android:text="@string/txtRemember"-->
            <!--android:textColor="#F82020"-->
            <!--app:cbd_strokeColor="#F82020"-->
            <!--app:cbd_tickColor="@color/colorPrimaryDark" />-->

        <!--<TextView-->
            <!--android:id="@+id/forgotpassword1"-->
            <!--style="@style/Base.TextAppearance.AppCompat.Body1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--android:padding="0dp"-->
            <!--android:text="@string/txtForgotpass"-->
            <!--android:textColor="#F82020"-->
            <!--android:textStyle="italic" />-->

        <Button
            android:id="@+id/buttonSignIn"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_signup"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:text="@string/txtLogin"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/link_signup"
            style="@style/Base.TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="0dp"
            android:text="No account yet? Create one"

          />


    </LinearLayout>

</RelativeLayout>