<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Booking"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical">

        <!--<android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.CardView>-->


        <TextView
            android:id="@+id/txtkindlypick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="Kindly pick a date you wish to refill your cylinder."
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/homeDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="Fill in Date"
            android:inputType="date" />

        <EditText
            android:id="@+id/homeTimePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:hint="Fill in Time"
            android:inputType="time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp">


            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtsizeofcy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="25dp"
            android:text="Quantity"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/homeSizeMinusText"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:onClick="decrement"
                android:text="@string/homeSizeMinusText" />

            <EditText
                android:id="@+id/kgText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/homeSizeZeroHint"
                android:inputType="numberDecimal"
                android:text="@string/homeSizeZeroText"
                android:textAlignment="center" />


            <Button
                android:id="@+id/homeSizePlusText"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:onClick="increment"
                android:text="@string/homeSizePlusText" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp">

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="300dp"
            android:src="@drawable/ic_shopping_cart_black_24dp" />
    </LinearLayout>

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="63dp"-->
        <!--android:layout_height="59dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_marginStart="314dp"-->
        <!--android:layout_marginLeft="314dp"-->
        <!--android:layout_marginTop="636dp"-->
        <!--android:layout_marginEnd="33dp"-->
        <!--android:layout_marginRight="33dp"-->
        <!--android:layout_marginBottom="36dp"-->
        <!--android:clickable="true"-->
        <!--app:srcCompat="@drawable/ic_shopping_cart_black_24dp" />-->


</RelativeLayout>